data/derived/comb/progs/unify/prog5196.ml.out
Characters 94-116:
  | l   -> sepConcat( ";", List.map(f, l));;
                    ^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type string
